force-app/main/default/objects/Logger_Setting__mdt/fields/Context_Field__c.field-meta.xml
<CustomField>
    <fullName>Context_Field__c</fullName>
    <label>Context Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>