force-app/main/default/objects/Logger_Setting__mdt/fields/Event_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Object_Name__c</fullName>
    <label>Event Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>