force-app/main/default/objects/Logger_Setting__mdt/fields/Event_Payload_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Payload_Field__c</fullName>
    <label>Event Payload Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>