force-app/main/default/objects/Logger_Setting__mdt/fields/Level_Field__c.field-meta.xml
<CustomField>
    <fullName>Level_Field__c</fullName>
    <label>Level Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>