force-app/main/default/objects/Logger_Setting__mdt/fields/Log_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Object_Name__c</fullName>
    <label>Log Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>