force-app/main/default/objects/Logger_Setting__mdt/fields/Masking_Keys__c.field-meta.xml
<CustomField>
    <fullName>Masking_Keys__c</fullName>
    <label>Masking Keys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>