force-app/main/default/objects/Logger_Setting__mdt/fields/Message_Field__c.field-meta.xml
<CustomField>
    <fullName>Message_Field__c</fullName>
    <label>Message Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>