force-app/main/default/objects/Logger_Setting__mdt/fields/Reference_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id_Field__c</fullName>
    <label>Reference Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>