force-app/main/default/objects/Logger_Setting__mdt/fields/Use_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Use_Platform_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Platform Event</label>
    <type>Checkbox</type>
</CustomField>